# inkling

./: .gitignore  .gitmodules  CMakeLists.txt
examples/test/: main.c
inkdev/: build.c  build.h  dll.c  dll.h  main.c
inklib/dev/: api.c  api.h
inklib/include/inkling/: arena.h  common.h  file.h  gfx.h  input.h  log.h  marks.h  math.h  memory.h  panic.h  reflect.h  respool.h  str.h  types.h  util.h  window.h
inklib/src/: arena.c  file.c  gfx.c  gfxTypeInfos.c  input.c  log.c  math.c  memory.c  reflect.c  respool.c  str.c  window.c
inkrun/: entry.c
